--- a/recall/src/app/alumni/contactus/contactus.component.html
+++ b/recall/src/app/alumni/contactus/contactus.component.html
@@ -19,7 +19,7 @@
       <h4 class="text-center message">We would love to hear from you !</h4>
       <form [formGroup]="feedBackform">
       <div class="form-group">
-        <label class="control-label col-2" for="fname">First Name:</label>
+        <label class="control-label col-2" for="fname">*First Name:</label>
         <div class="col-10">          
         <input type="text" class="form-control" id="fname" placeholder="Enter First Name"  formControlName="firstname">
         </div>
@@ -31,23 +31,25 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-2" for="email">Email:</label>
+        <label class="control-label col-2" for="email">*Email:</label>
         <div class="col-10">
         <input type="email" class="form-control" id="email" placeholder="Enter email" formControlName="email">
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-2" for="comment">Comment:</label>
+        <label class="control-label col-2" for="comment">*Comment:</label>
         <div class="col-10">
         <textarea  formControlName="comment" class="form-control" rows="5" id="comment"></textarea>
         </div>
       </div>
+     
       <div class="form-group">        
         <div class="col-offset-2 col-10">
-        <button type="submit" (click)="Comment()" class="btn btn-default">Submit</button>
+        <button type="submit" (click)="Comment(feedBackform.value)" class="btn btn-default">Submit</button>
         </div>
       </div>
     </form>
+    <div class="err" *ngIf="errorsinform">Please Fill All Required Fields</div>
     </div>
     <div *ngIf="isFeedBacsubmited">
       <h4 class="text-center message">Thank you for your feedback</h4>
