--- a/recall/src/app/alumni/homepage/homepage.component.html
+++ b/recall/src/app/alumni/homepage/homepage.component.html
@@ -14,7 +14,7 @@
       <div class="qricon" (click)='getQr()'> <img src='../../assets/images/qr-icon2.png' height="50px"></div>
       <div class="cake job" [routerLink]="['/Alumni/JobStreet']"><img src='../../assets/images/job.png' height="30px"></div>
       <div class="cake" [routerLink]="['/Alumni/Birthdays']"> <img src='../../assets/images/bicon.png' height="30px"><div class="notify cakenotify" *ngIf=" bdaycount>0">{{birthdayToday.length}}</div></div>
-    <div class="bell notifbell" [routerLink]="['/Alumni/Notifications']"> <div class="notify">3</div></div>
+    <div class="bell notifbell" [routerLink]="['/Alumni/Notifications']"> <div class="notify" *ngIf=" ncount>0">{{ncount}}</div></div>
    
         <!-- <i class="faa fa fa-birthday-cake" aria-hidden="true" style="font-size: 30px;" [routerLink]="['/Birthdays']"></i><span class="circle" *ngIf=" bdaycount>0">{{bdaycount}}</span>
         <i class="faa fa fa-bell" aria-hidden="true"  style="font-size: 30px;" [routerLink]="['/Notifications']"></i><span class="circle">5</span> -->
