--- a/recall/src/app/admin/events/events.component.html
+++ b/recall/src/app/admin/events/events.component.html
@@ -78,12 +78,12 @@
           
           </div>
           <div class="form-group datetime">
-            <input type="text" id="name" class="form-control" formControlName="starttime" required>
+            <input type="time" id="name" class="form-control" formControlName="starttime" required>
             <label class="form-control-placeholder" for="name">Start Time*</label>
     
           </div>
           <div class="form-group datetime">
-            <input type="text" id="name" class="form-control" formControlName="endtime" required>
+            <input type="time" id="name" class="form-control" formControlName="endtime" required>
         <label class="form-control-placeholder" for="name">End Time*</label>
         
           </div>
