--- a/recall/src/app/admin/editevents/editevents.component.html
+++ b/recall/src/app/admin/editevents/editevents.component.html
@@ -47,7 +47,7 @@
 
 <div *ngIf="openeditEvent" class="createevents">
   <div>
-    <h5 class="eventtext">Update Event</h5>
+    <h5 class="eventtext" style="padding: 10px;">Update Event</h5>
 </div>
 <form [formGroup]="eventForm">
 <div class="form-group">
