--- a/recall/src/app/admin/admincontact/admincontact.component.html
+++ b/recall/src/app/admin/admincontact/admincontact.component.html
@@ -7,16 +7,16 @@
     </div>
     <div class="formdetails">
         <div class="form-group">
-            <input type="text" id="title" name="title" [(ngModel)]='url' class="form-control" required >
-            <label class="form-control-placeholder" for="title">Website Url</label>
+            <input type="text" id="title" name="url" [(ngModel)]='url' class="form-control" required >
+            <label class="form-control-placeholder" for="url">Website Url</label>
           </div>
           <div class="form-group">
-            <input type="text" id="title" name="title"  [(ngModel)]='email' #title class="form-control" required >
-            <label class="form-control-placeholder" for="title">Email</label>
+            <input type="text" id="title1" name="email"  [(ngModel)]='email' #title class="form-control" required >
+            <label class="form-control-placeholder" for="email">Email</label>
           </div>
           <div class="form-group">
-            <input type="text" id="title" name="title"  [(ngModel)]='mobile' #title class="form-control" required >
-            <label class="form-control-placeholder" for="title">Phone</label>
+            <input type="text" id="title2" name="phone"  [(ngModel)]='mobile' #title class="form-control" required >
+            <label class="form-control-placeholder" for="phone">Phone</label>
           </div>
           <div class="form-group">
             <label  for="name">Address</label>
