--- a/recall/src/app/aboutus/aboutus.component.html
+++ b/recall/src/app/aboutus/aboutus.component.html
@@ -4,8 +4,8 @@
 <div class="row">
   <div class="col-6" *ngFor='let each of about'>
   <div class="card" style="color: black;width: 85%;left: 8%;padding: 10px;">
-    <div class="imageDiv" style="width: 10%;">
-    <img class="card-img-top" src="{{each.image}}" alt="Card image cap" height="220">
+    <div class="imageDiv" style="width: 100%;">
+    <img class="card-img-top" src="{{each.image}}" alt="Card image cap" height="220" width="100%">
     </div>
     <div class="card-body">
       <h5 class="card-title">{{each.title}}</h5>
